--- a/package.json
+++ b/package.json
@@ -6,8 +6,7 @@
   "scripts": {
     "dev": "vite",
     "build": "tsc && vite build",
-    "preview": "vite preview",
-    "start": "node index.html"
+    "preview": "vite preview"
   },
   "dependencies": {
     "axios": "^0.27.2",
